# ClaudeCurator

./: .env.example  .gitignore  LICENSE  README.md  curator_server.py  deploy_webhook.py  example_guidelines.md  pyproject.toml  requirements.txt  system_prompt.txt  test_curator.py
scripts/: deploy_webhook.py  run_gunicorn.py  run_server.py
src/curator_server/: __init__.py  create_app.py  curator_server.py  gunicorn_entry.py  main.py  utility.py
